; ModuleID = '/home/carl/AnghaBench/mimikatz/mimikatz/modules/extr_kuhl_m_misc.c_kuhl_m_misc_lock.c'
source_filename = "/home/carl/AnghaBench/mimikatz/mimikatz/modules/extr_kuhl_m_misc.c_kuhl_m_misc_lock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [8 x i32] [i32 112, i32 114, i32 111, i32 99, i32 101, i32 115, i32 115, i32 0], align 4
@.str.1 = private unnamed_addr constant [13 x i32] [i32 101, i32 120, i32 112, i32 108, i32 111, i32 114, i32 101, i32 114, i32 46, i32 101, i32 120, i32 101, i32 0], align 4
@.str.2 = private unnamed_addr constant [21 x i32] [i32 80, i32 114, i32 111, i32 120, i32 121, i32 32, i32 112, i32 114, i32 111, i32 99, i32 101, i32 115, i32 115, i32 32, i32 58, i32 32, i32 37, i32 119, i32 90, i32 10, i32 0], align 4
@kuhl_m_misc_lock_callback = common dso_local global i32 0, align 4
@STATUS_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @kuhl_m_misc_lock(i32 %0, i32** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32**, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32** %1, i32*** %4, align 8
  %7 = load i32, i32* %3, align 4
  %8 = load i32**, i32*** %4, align 8
  %9 = call i32 @kull_m_string_args_byName(i32 %7, i32** %8, i8* bitcast ([8 x i32]* @.str to i8*), i32* %5, i8* bitcast ([13 x i32]* @.str.1 to i8*))
  %10 = load i32, i32* %5, align 4
  %11 = call i32 @RtlInitUnicodeString(i32* %6, i32 %10)
  %12 = call i32 @kprintf(i8* bitcast ([21 x i32]* @.str.2 to i8*), i32* %6)
  %13 = load i32, i32* @kuhl_m_misc_lock_callback, align 4
  %14 = call i32 @kull_m_process_getProcessInformation(i32 %13, i32* %6)
  %15 = load i32, i32* @STATUS_SUCCESS, align 4
  ret i32 %15
}

declare dso_local i32 @kull_m_string_args_byName(i32, i32**, i8*, i32*, i8*) #1

declare dso_local i32 @RtlInitUnicodeString(i32*, i32) #1

declare dso_local i32 @kprintf(i8*, i32*) #1

declare dso_local i32 @kull_m_process_getProcessInformation(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
